--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -9,6 +9,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
+                deleteDir()
                 sh 'echo passed'
                 git branch: 'master', url: 'https://github.com/ShubhamMestry24/basic-ci-cd.git'
             }
