--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -57,7 +57,7 @@ pipeline{
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
                         git add spring-boot-app-manifests/deployment.yml
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_REPO_NAME}/${GIT_REPO_NAME} HEAD:master
+                        git push https://${github}@github.com/${GIT_REPO_NAME}/${GIT_REPO_NAME} HEAD:master
                     '''
                 }
             }
