--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -1,13 +1,15 @@
-# You can change this base image to anything else
-# But make sure to use the correct version of Java
 FROM adoptopenjdk/openjdk11:alpine-jre
 
-# Simply the artifact path
+# Build-time variable for JAR location
 ARG artifact=target/spring-boot-web.jar
 
 WORKDIR /opt/app
 
+# Copy the JAR into container
 COPY ${artifact} app.jar
 
-# This should not be changed
+# Optional: declare the default port
+EXPOSE 8000
+
+# Run the app
 ENTRYPOINT ["java","-jar","app.jar"]
