--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -26,7 +26,7 @@ pipeline{
         }
         
         stage('Build and Push Docker Image'){
-            enviornment{
+            environment{
                 DOCKER_IMAGE = "iamshubham24/ultimate-cicd:${BUILD_NUMBER}"
                 // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
                 REGISTRY_CREDENTIALS = credentials('docker-cred')
@@ -37,7 +37,8 @@ pipeline{
                     sh 'cd spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
                     def dockerImage = docker.image("${DOCKER_IMAGE}")
                     docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                    dockerImage.push()
+                        dockerImage.push()
+                    }
                 }
             }
         }
