--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -50,7 +50,7 @@ pipeline{
             }
             
             steps{
-                withCredentials([string(credentialsId: '', variable: '')]){
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
                         git config user.email "iamshubhammestry24@gmail.com"
                         git config.user.name "ShubhamMestry24"
@@ -58,7 +58,7 @@ pipeline{
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
                         git add spring-boot-app-manifests/deployment.yml
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https://${github}@github.com/${GIT_REPO_NAME}/${GIT_REPO_NAME} HEAD:master
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_REPO_NAME}/${GIT_REPO_NAME} HEAD:master
                     '''
                 }
             }
