--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: iamshubham24/ultimate-cicd:replaceImageTag
+        image: iamshubham24/ultimate-cicd:37
         ports:
         - containerPort: 8080
