--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -79,10 +79,18 @@ pipeline{
                     sh '''
                         git config user.email "iamshubhammestry24@gmail.com"
                         git config user.name "ShubhamMestry24"
-                        Build_NUMBER=${BUILD_NUMBER}
+                        BUILD_NUMBER=${BUILD_NUMBER}
+
+                        # Replace image tag in deployment YAML
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
+
+                        # Stage only the YAML
                         git add spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+
+                        # Commit only if there are changes
+                        git diff --cached --quiet || git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+
+                        # Push to master
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:master
                     '''
                 }
